# Anarchy-ai

./: .env  .env.example  .gitignore  .sonarcloud.properties  AUTH_BILLING_STATUS.md  Anarchy AI Desktop Launcher.bat  Create Desktop Shortcut.ps1  DEPLOY_WEBHOOK.ps1  DESKTOP_APP.md  KIE_INTEGRATION_PLAN.md  LICENSE.txt  Make Desktop Shortcut.bat  PRIVACY_POLICY.md  README.md  SONARQUBE_FIXES.md  auth-callback.html  build_installer.bat  build_installer.ps1  create-desktop-shortcut.bat  create_predictions_table.sql  eslint-report.json  eslint.config.js  index.html  install-node.bat  installer.iss  package-lock.json  package.json  playwright.config.ts  register-file-icon.ps1  setup.js  start.bat  start.sh  structure.txt  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.windsurf/workflows/: release.md
anarchy_audit/: agent_audit.js  build_pdf_report_02.py  build_pdf_report_03.py  build_pdf_report_04.py  build_pdf_report_06.py  build_pdf_reports_07_08.py  prompts.json
anarchy_audit/reports/: phase_1_architecture.md  (+2 more)
scripts/: generate-max-icons.ps1  generate-revit-icon.ps1  make_transparent.py  merge_icon_logo.py  merge_icon_logo_clean.py  process_new_icon.py  release.js  zip_codebase.js  zip_setup.js
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  custom-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/patched_crates/time/: .cargo_vcs_info.json  Cargo.toml
src-tauri/resources/: AnarchyConnector.ms
src-tauri/resources/autocad-plugin/: AnarchyAutoCad.cs  AnarchyAutoCad2025.cs  AnarchyAutoCad2025.csproj.template  PackageContents.xml.template
src-tauri/resources/revit-plugin/: Anarchy.addin.template  AnarchyRevit.cs
src-tauri/src/: main.rs
supabase/: QUICKSTART.md  SETUP_GUIDE.md  WEBHOOK_SETUP.md  delete_current_user.sql
(+275 files in other folders)
