[package]
name = "anarchy-ai"
version = "0.3.10"
description = "Anarchy AI - AI Image Builder Desktop App"
authors = ["Anarchy AI Team"]
edition = "2021"

[package.metadata.bundle]
icon = [
    "icons/32x32.png",
    "icons/128x128.png",
    "icons/128x128@2x.png",
    "icons/icon.icns",
    "icons/icon.ico"
]

[build-dependencies]
tauri-build = { version = "2.5.6", features = ["config-json5"] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
tauri-plugin-dialog = "2.7.0"
dirs = "5"
tauri-plugin-drag = "2.1.1"
tauri-plugin-http = "2"
image = { version = "0.25", default-features = false, features = ["bmp", "png"] }
open = "5"
keyring = "2.1.2"

[patch.crates-io]
time = { path = "patched_crates/time" }


